# hyperliquid-backtest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  WORKING_EXAMPLES.md  WORKING_EXAMPLES_SUMMARY.md  basic_backtest_results.csv  btc_data.csv  btc_usdc_ohlcv_1h.csv  simple_backtest_results.csv  test_time.rs
.github/workflows/: rust.yml
benches/: performance_benchmarks.rs
docs/: PUBLISHING.md
examples/: basic_backtest.rs  comprehensive_example.rs  csv_export_example.rs  enhanced_csv_export_example.rs  funding_arbitrage_advanced.rs  funding_indicators.rs  funding_report.rs  ga_optimize.rs  getting_started.rs  live_trading_deployment_example.rs  live_trading_deployment_guide.rs  live_trading_safety_example.rs  mode_reporting_example.rs  multi_asset_backtest.rs  multi_mode_comparison_example.rs  paper_trading_example.rs  paper_trading_setup_example.rs  portfolio_management_example.rs  ratatui_backtest_ui.rs  real_time_monitoring_and_alerting_example.rs  real_time_monitoring_example.rs  risk_management_configuration_example.rs  simple_data_fetching.rs  simple_example.rs  simple_working_backtest.rs  strategy_comparison.rs  strategy_migration_example.rs  strategy_optimization_workflow_example.rs  trading_mode_example.rs  unified_data_example.rs  unified_strategy_example.rs  working_data_fetch.rs
src/: api_docs.rs  backtest.rs  csv_export.rs  data.rs  data_tests.rs  errors.rs  funding_report.rs  indicators.rs  lib.rs  live_trading.rs  live_trading_safety.rs  migration.rs  mode_reporting.rs  paper_trading.rs  real_time_data_stream.rs  real_time_monitoring.rs  risk_manager.rs  strategies.rs  trading_mode.rs  trading_mode_impl.rs  unified_data.rs  unified_data_impl.rs  utils.rs
src/alpha/: mod.rs
src/features/: mod.rs
src/optimization/: mod.rs
src/report/: mod.rs
src/signals/: mod.rs
src/strategies/: enhanced_sma_strategy.rs  funding_arbitrage_strategy.rs  strategy_template.rs  trading_strategy.rs
src/strategy/: alpha_driven.rs  mod.rs
src/tests/: advanced_risk_controls_tests.rs  alpha_pipeline_tests.rs  api_validation_tests.rs  backtest_tests.rs  basic.rs  commission_tests.rs  csv_export_tests.rs  csv_export_tests_enhanced.rs  data_conversion_tests.rs  data_price_tests.rs  data_tests.rs  errors_tests.rs  funding_payment_tests.rs  funding_report_tests.rs  indicators_tests.rs  indicators_tests_extended.rs  integration_tests.rs  live_trading_integration_tests.rs  live_trading_safety_tests.rs  live_trading_tests.rs  mock_data.rs  mode_reporting_tests.rs  paper_trading_tests.rs  performance_stress_tests.rs  performance_tests.rs  real_time_monitoring_tests.rs  regression_tests.rs  risk_manager_tests.rs  safety_validation_tests.rs  standalone_position_tests.rs  standalone_unified_data_tests.rs  strategies_tests.rs  strategy_consistency_tests.rs  trading_mode_tests.rs  trading_strategy_tests.rs  unified_data_impl_tests.rs  unified_data_tests.rs  workflow_tests.rs
strategies/: sma_cross_10_30.json  sma_cross_10_30_funding.json  sma_cross_12_26.json  sma_cross_12_26_aggressive.json  sma_cross_15_40.json  sma_cross_20_50.json  sma_cross_3_9.json  sma_cross_50_200.json  sma_cross_5_20.json  sma_cross_7_25.json  sma_cross_8_21.json
