# EXPERIMENTAL SOFTWARE. USE AT YOUR OWN RISK.
# All actions are performed at your own risk.
[package]
name = "hyperliquid-backtest"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Hyperliquid Backtester Contributors"]
description = "Comprehensive Rust library for backtesting trading strategies with Hyperliquid data, funding rates, and perpetual futures mechanics"
documentation = "https://docs.rs/hyperliquid-backtest"
homepage = "https://github.com/xsa-dev/hyperliquid-backtest"
repository = "https://github.com/xsa-dev/hyperliquid-backtest"
license = "MIT"
keywords = ["trading", "backtesting", "hyperliquid", "cryptocurrency", "defi"]
categories = ["finance", "api-bindings", "algorithms", "simulation", "mathematics"]
readme = "README.md"
autoexamples = false
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
    "*.log",
    "*.tmp",
    ".DS_Store",
    "Thumbs.db",
]
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "docs/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1.0"
rand = { version = "0.8", default-features = false, features = ["std"] }

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
rayon = "1.10"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk" }

[[example]]
name = "mode_reporting_example"
path = "examples/mode_reporting_example.rs"
